 * Discontinued support for PowerPC-based and 32bit Intel-based Macs
 * VLC requires Mac OS X 10.6 or later now

Mac OS X Interface:
 * add a GUI for the QTSound access module to process audio captured locally
   - This also allows to capture input from a webcam and a mic at the same time.
 * add an option to let the Apple Remote control the system volume instead of
   VLC's internal volume level
 * add an option to show next / previous buttons
 * add an option to hide the shuffle and repeat buttons
 * add optional playlist columns for track number, genre, album, description,
   date and language.
 * add options to the Advanced Open File dialog for start and stop time
 * add an option to play videos as a desktop background
 * add a new panel for media conversation and streaming
 * The Streaming/Transcoding wizard and the open dialog's output panel are
   deprecated now

Qt:
 * Partial support for Qt5.0
 * Menus modifications and improvements
 * Playlist improvements and fixes, including PictureFlow view
 * Streaming output wizard rewrite
 * Numerous fixes

libVLC:
 * new libvlc_audio_output_device_list_get and libvlc_audio_output_device_list_release functions
   to replace the deprecated libvlc_audio_output_device_count, libvlc_audio_output_device_longname
   and libvlc_audio_output_device_id
 * new libvlc_log_subscribe and libvlc_log_unsubscribe function to register logging callbacks

Removed modules:
 * portaudio audio output: use the native audio output instead
 * X11 On Screen Display notifications (xosd)
 * Linux Framebuffer On Screen Display interface (fbosd)
 * RTMP access: use libavformat avio instead
 * RTMP access_output: use libavformat avio instead
 * Hildon GUI
 * MSN messenger "now playing" (broken and unmaintained since VLC 1.0.0)
 * Telepathy framework "now playing" (broken and unmaintained since VLC 1.0.0)


Changes between 2.0.2 and 2.0.3:
--------------------------------

Access:
 * Fix some HTTP request that broke some radio channels

Demuxers: